--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -5,25 +5,36 @@ on:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 name: Create Release
-
 jobs:
-  build:
-    name: Create Release
-    runs-on: ubuntu-latest
+  test:
+    # 任务运行的环境
+    runs-on: ubuntu-20.04
+    strategy:
+      # When set to true, GitHub cancels all in-progress jobs if any matrix job fails. Default: true
+      fail-fast: false
+    # 任务的步骤
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+      # step1 
+      - name: GitHub - 执行的系统类型
+        run: uname -an
+      - run: echo "打印默认环境变量 工作流程的名称。 $GITHUB_WORKFLOW"
+      - run: echo "打印默认环境变量 仓库中每个运行的唯一编号。 $GITHUB_RUN_ID"
+      - run: echo "打印默认环境变量 仓库中特定工作流程每个运行的唯一编号。 $GITHUB_RUN_NUMBER"
+      - run: echo "打印默认环境变量 当前作业的 job_id。 $GITHUB_JOB"
+      - run: echo "打印默认环境变量 操作唯一的标识符 (id)。 $GITHUB_ACTION"
+      - run: echo "打印默认环境变量 您的操作所在的路径。 $GITHUB_ACTION_PATH"
+      - run: echo "打印默认环境变量 当 GitHub Actions 运行工作流程时。 $GITHUB_ACTIONS"
+      - run: echo "打印默认环境变量 发起工作流程的个人或应用程序的名称。 $GITHUB_ACTOR"
+      - run: echo "打印默认环境变量 所有者和仓库名称。 $GITHUB_REPOSITORY"
+
+      - run: echo "打印环境变量 触发工作流程的 web 挂钩事件的名称 $GITHUB_EVENT_NAME"
+      - run: echo "打印环境变量 具有完整 web 挂钩事件有效负载的文件路径 $GITHUB_EVENT_PATH"
+      - run: echo "打印环境变量 GitHub 工作空间目录路径 $GITHUB_WORKSPACE"
+      - run: echo "打印环境变量 触发工作流程的提交 SHA $GITHUB_SHA"
+      - run: echo "打印环境变量 触发工作流程的分支或标记参考 $GITHUB_REF"
+      - run: echo "打印环境变量 仅为拉取请求事件设置。 头部分支的名称 $GITHUB_HEAD_REF"
+      - run: echo "打印环境变量 仅为拉取请求事件设置。 基础分支的名称 $GITHUB_BASE_REF"
+      - run: echo "打印环境变量 返回 GitHub 服务器的 URL $GITHUB_SERVER_URL"
+      - run: echo "打印环境变量 返回 API URL $GITHUB_API_URL"
+      - run: echo "打印环境变量 返回 GraphQL API URL $GITHUB_GRAPHQL_URL"
+
